--- a/➜ Avaliações/1º Modulo - HTML/1ª Avaliação Prática/1º Portifólio/HTML/sobremim.html
+++ b/➜ Avaliações/1º Modulo - HTML/1ª Avaliação Prática/1º Portifólio/HTML/sobremim.html
@@ -36,7 +36,7 @@
         <ul>
             <h3 class="series"><b>♡ Listas de Séries que Assisto ♡</b></h3>
             <li>The Last Of Us</li>
-            <li>Strager Thing</li>
+            <li>Strager Things</li>
             <li>The 100</li>
             <li>Wandinha</li>
             <li>Game of Thrones</li>
